add bundles, icons for user profile
git-svn-id: https://10.8.37.111/svn/jahia/trunk/modules@36747 69c369ed-ed09-0410-a4a1-e19a46c23626

--- a/src/main/webapp/resources/JahiaBookmarks_en.properties
+++ b/src/main/webapp/resources/JahiaBookmarks_en.properties
@@ -5,3 +5,5 @@ jnt_bookmarkButton = Bookmark button
 bookmark.add = Add bookmark
 jnt_bookmark.date=Date
 jnt_bookmark.url=URL
+
+jnt_currentUserBookmarks=My bookmarks
