--- a/src/main/webapp/resources/JahiaBookmarks_fr.properties
+++ b/src/main/webapp/resources/JahiaBookmarks_fr.properties
@@ -5,3 +5,5 @@ bookmark.add = Ajouter un signet
 jnt_bookmark=Signet
 jnt_bookmark.date=Date
 jnt_bookmark.url=URL
+
+jnt_currentUserBookmarks=Mes bookmarks
