--- a/src/main/webapp/resources/JahiaBookmarks_fr.properties
+++ b/src/main/webapp/resources/JahiaBookmarks_fr.properties
@@ -2,6 +2,8 @@ jnt_bookmarks = Signet
 jnt_bookmarkButton = Bouton signet
 
 bookmark.add = Ajouter un signet
+bookmark.emptyResults = Aucun bookmark ajouté
+
 jnt_bookmark=Signet
 jnt_bookmark.date=Date
 jnt_bookmark.url=URL
