--- a/src/main/webapp/resources/JahiaBookmarks_en.properties
+++ b/src/main/webapp/resources/JahiaBookmarks_en.properties
@@ -3,6 +3,8 @@ jnt_bookmarks = Bookmarks
 jnt_bookmarkButton = Bookmark button
 
 bookmark.add = Add bookmark
+bookmark.emptyResults = No bookmark added yet
+
 jnt_bookmark.date=Date
 jnt_bookmark.url=URL
 
