add pager to messages in user profile, and finish pager in bookmarks
git-svn-id: https://10.8.37.111/svn/jahia/trunk/modules@37123 69c369ed-ed09-0410-a4a1-e19a46c23626

--- a/src/main/webapp/resources/JahiaBookmarks_en.properties
+++ b/src/main/webapp/resources/JahiaBookmarks_en.properties
@@ -9,3 +9,4 @@ jnt_bookmark.date=Date
 jnt_bookmark.url=URL
 
 jnt_currentUserBookmarks=My bookmarks
+jnt_currentUserBookmarks.numberOfBookmarksPerPage=Number of bookmarks display per page
