--- a/src/main/webapp/resources/JahiaBookmarks_fr.properties
+++ b/src/main/webapp/resources/JahiaBookmarks_fr.properties
@@ -9,3 +9,4 @@ jnt_bookmark.date=Date
 jnt_bookmark.url=URL
 
 jnt_currentUserBookmarks=Mes bookmarks
+jnt_currentUserBookmarks.numberOfBookmarksPerPage=Nombre de bookmarks affichés par page
