--- a/src/main/resources/resources/JahiaMyBookmarks_fr.properties
+++ b/src/main/resources/resources/JahiaMyBookmarks_fr.properties
@@ -2,12 +2,11 @@ jnt_bookmarks = Signet
 jnt_bookmarkButton = Bouton signet
 
 bookmark.add = Ajouter un signet
-bookmark.added = Signet ajout\u00E9
-bookmark.emptyResults = Aucun bookmark ajout\u00E9
+bookmark.emptyResults = Aucun bookmark ajouté
 
 jnt_bookmark=Signet
 jnt_bookmark.date=Date
 jnt_bookmark.url=URL
 
 jnt_currentUserBookmarks=Mes bookmarks
-jnt_currentUserBookmarks.numberOfBookmarksPerPage=Nombre de bookmarks affich\u00E9s par page
+jnt_currentUserBookmarks.numberOfBookmarksPerPage=Nombre de bookmarks affichés par page
