--- a/src/main/resources/resources/JahiaMyBookmarks_en.properties
+++ b/src/main/resources/resources/JahiaMyBookmarks_en.properties
@@ -10,3 +10,6 @@ jnt_bookmark.url=URL
 
 jnt_currentUserBookmarks=My bookmarks
 jnt_currentUserBookmarks.numberOfBookmarksPerPage=Number of bookmarks display per page
+
+bookmark.added =Bookmark successfully saved
+bookmark.alreadyExist =Bookmark already exist
