--- a/src/main/resources/resources/JahiaMyBookmarks_fr.properties
+++ b/src/main/resources/resources/JahiaMyBookmarks_fr.properties
@@ -10,3 +10,6 @@ jnt_bookmark.url=URL
 
 jnt_currentUserBookmarks=Mes bookmarks
 jnt_currentUserBookmarks.numberOfBookmarksPerPage=Nombre de bookmarks affichés par page
+
+bookmark.added =Signet sauvegardé avec succès
+bookmark.alreadyExist =Signet déjà existant
